--- a/REST-API/Dockerfile
+++ b/REST-API/Dockerfile
@@ -1,43 +1,27 @@
-# Set base image with PHP, Composer, and common extensions
+# Base image
 FROM php:8.2-fpm
 
-# Set working directory
+# Set working dir inside the container
 WORKDIR /var/www
 
-# Install system dependencies and PHP extensions
+# Copy only laravel-app contents
+COPY ./RESTAPI/composer.json ./composer.json
+COPY ./RESTAPI/composer.lock ./composer.lock
+
+# Install system deps
 RUN apt-get update && apt-get install -y \
-    build-essential \
-    libpng-dev \
-    libonig-dev \
-    libxml2-dev \
-    zip \
-    unzip \
-    curl \
-    git \
-    nano \
-    libzip-dev \
-    libpq-dev \
-    nodejs \
-    npm \
-    && docker-php-ext-install pdo pdo_mysql mbstring exif pcntl bcmath gd zip
+    libzip-dev zip unzip git curl \
+    && docker-php-ext-install pdo pdo_mysql mbstring zip bcmath
 
-# Install Composer
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-# Copy Laravel files
-COPY . .
-
-# Install PHP dependencies
+# Install composer dependencies
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN composer install --optimize-autoloader --no-dev
 
-# Install Node dependencies and build assets (optional if using Laravel Mix/Vite)
-#RUN npm install && npm run build
+# Now copy the full Laravel app code
+COPY ./RESTAPI/ .
 
-# Set permissions
-RUN chown -R www-data:www-data /var/www && chmod -R 755 /var/www/storage
-
-# Expose port 8000
+# Expose the port
 EXPOSE 8000
 
-# Start Laravel with Artisan serve (you can use nginx/php-fpm combo in production)
-CMD php artisan serve --host=0.0.0.0 --port=8000
+# Start Laravel
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
