--- a/.dockerignore
+++ b/.dockerignore
@@ -2,3 +2,14 @@
 node_modules
 vendor
 .env
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/_ide_helper.php
